# dw-etl

./: .env.example  .gitignore  README.md  README_DB_TEST.md  cleaned_world_bank_data.csv  pyproject.toml  test_db_connection.py
.dagster_home/.telemetry/: id.yaml
.dagster_home/history/: runs.db
.dagster_home/history/runs/: 2a61f5f6-e409-4397-a209-89fc916cecd5.db  7ff9f0d6-1609-4ab8-bece-cee36a98e093.db  index.db
.dagster_home/schedules/: schedules.db
data/: peaks.csv
himalayan_etl/: assets.py  jobs.py  main.py  resources.py  resources_simple.py
himalayan_etl/ops/: automation.py  clean.py  cleaning.py  dimensions.py  extract.py  extraction.py  facts.py  load.py  transform.py  world_bank.py
raw_analysis/: main.py
raw_analysis/data/: SETUP.DBF  exped.CDX  peaks.CDX  peaks.DBF  peaks.FPT  refer.CDX  refer.FPT
sql/: create_schema.sql  drop_schema.sql
src/himalayan_etl/: __init__.py  assets.py  jobs.py  main.py  resources.py
src/himalayan_etl/ops/: automation.py  cleaning.py  dimensions.py  extraction.py  facts.py  world_bank.py
tests/: test_etl_pipeline.py
